--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -22,11 +22,10 @@
     <!-- Add Product Form -->
     <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data" aria-label="Add new product form">
       {% csrf_token %}
-
       {% for field in form %}
-        {% if field.name != 'image' %}
+        {% if field.name != 'image' and field.name != 'image_url' %}
           {{ field|as_crispy_field }}
-        {% else %}
+        {% elif field.name == 'image' %}
           <div class="form-group custom-file-field">
             <label for="{{ field.id_for_label }}" class="form-label font-weight-bold">Image:</label>
             {{ field }}
