--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -24,13 +24,13 @@
       {% csrf_token %}
 
       {% for field in form %}
-        {% if field.name != 'image' %}
-          {{ field|as_crispy_field }}
-        {% else %}
+        {% if field.name == 'image' %}
           <div class="form-group custom-file-field">
             <label for="{{ field.id_for_label }}" class="form-label font-weight-bold">Image:</label>
             {{ field }}
           </div>
+        {% elif field.name != 'image_url' %}
+          {{ field|as_crispy_field }}
         {% endif %}
       {% endfor %}
 
@@ -48,7 +48,6 @@
 {% block postloadjs %}
   {{ block.super }}
   <script type="text/javascript">
-    // Display selected image filename
     $('#new-image').change(function () {
       const file = $('#new-image')[0].files[0];
       $('#filename').text(`Image will be set to: ${file.name}`);
