--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -27,7 +27,47 @@
         <h3 id="delivery-info-heading" class="h5 text-muted">Default Delivery Information</h3>
         <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
           {% csrf_token %}
-          {{ form|crispy }}
+
+          <div class="form-group">
+            <label for="id_default_full_name">Full Name</label>
+            {{ form.default_full_name }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_phone_number">Phone Number</label>
+            {{ form.default_phone_number }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_street_address1">Street Address 1</label>
+            {{ form.default_street_address1 }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_street_address2">Street Address 2</label>
+            {{ form.default_street_address2 }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_town_or_city">Town or City</label>
+            {{ form.default_town_or_city }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_postcode">Postcode</label>
+            {{ form.default_postcode }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_county">County</label>
+            {{ form.default_county }}
+          </div>
+
+          <div class="form-group">
+            <label for="id_default_country">Country</label>
+            {{ form.default_country }}
+          </div>
+
           <button class="btn btn-navy text-uppercase mt-2">Update Information</button>
         </form>
       </section>
