styling to 404 page

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -15,9 +15,10 @@
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'products' %}" 
-                            class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
-                                Return to shop
-                        </a>
+   class="btn btn-primary btn-lg text-uppercase py-3 px-4 rounded-0">
+    Return to Shop
+</a>
+
                     </h4>
                 </div>
             </div>
